--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.1",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
     "@angular/core": "~8.1.1",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.1",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "bootstrap": "^4.3.1",
     "firebase": "^6.3.3",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.1.0",
     "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
