--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "@swimlane/ngx-datatable": "^16.0.3",
     "bootstrap": "^4.3.1",
     "firebase": "^6.3.3",
     "hammerjs": "^2.0.8",
